style(app): fix background image size on mobile

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,7 @@ body {
   font-family: sans-serif;
   font-size: 14px;
   overflow-y: scroll;
+  min-height: 100%;
 }
 
 *,
